# portfolio-optimizer

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
backtesting/: engine.py  report.py  strategy.py  transaction_costs.py
config/: logging_config.py  settings.py
data_layer/: cleaner.py  fetcher.py  pipeline.py  storage.py
eda/: correlation.py  distribution.py  drawdown.py  regime.py  report.py  returns.py  sector.py  volatility.py
feature_engineering/: FEATURES.md  market.py  momentum.py  pipeline.py  trend.py  volatility_features.py  volume.py
optimization/: equal_weight.py  markowitz.py  metrics.py  report.py  risk_parity.py  simulate.py
rl/: baselines.py  env.py  evaluate.py  train.py
tests/: test_backtesting.py  test_cleaner.py  test_eda.py  test_features.py  test_optimization.py  test_rl_env.py
