[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29",
    "ipykernel>=7.3.0",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "scipy>=1.13",
    "stable-baselines3>=2.3",
    "tabulate>=0.9",
    "torch>=2.3",
    "yfinance>=0.2.40",
]
